--- a/poorly_coded_store/templates/store/checkout.html
+++ b/poorly_coded_store/templates/store/checkout.html
@@ -1,15 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Amadon</title>
+    {% load static %}
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
 </head>
+
 <body>
-    <h3>Thank you for your business!</h3>
-    <p>We charged your credit card for $</p>
-    <p>You have ordered # items so far and spent $$ with Amadon.com!</p>
-    <p><a href="/">Go Back</a></p>
+    <div class="container">
+        <h3 class="mt-5">Thank you for your business!</h3>
+        <p>We charged your credit card for ${{ total_amount_charged }}</p>
+        <p>You have ordered {{ total_items_ordered }} items so far and spent ${{ total_amount_charged }} with
+            Amadon.com!</p>
+        <p><a href="/" class="btn btn-primary">Go Back</a></p>
+    </div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
+
 </html>
